--- a/.docker/docker.humble-dsr.env
+++ b/.docker/docker.humble-dsr.env
@@ -30,4 +30,4 @@ CONTAINER_SERVICE_NAME=${ROS2_SERVICE_NAME:-"app"}                              
 CONTAINER_WEB_SVC_PORT=${WEB_SVC_PORT:-"8080"}                                   # The Web service port in the Docker container
 HOST_WEB_SVC_PORT=${ROS2_HOST_WEB_SVC_PORT-"19030"}                              # The Web service port on the host machine to be mapped to the container's Web service port
 APP_WORKSPACE_ROOT="${CONTAINER_HOME}/${APP_DIRNAME}"
-HOST_WORKSPACE_ROOT="${PWD}/workspace/humble-dsr"
+HOST_WORKSPACE_ROOT="${PWD}/workspace/${IMAGE_VARIANT}"
