--- a/.docker/Dockerfile.foxy
+++ b/.docker/Dockerfile.foxy
@@ -49,6 +49,10 @@ ENV CMAKE_VERSION=$ARG_CMAKE_VERSION
 RUN bash "${SCRIPTS_DIR}/${SHELL_SCRIPT}"
 ENV PATH="${APP_INSTALL_ROOT}/cmake-${CMAKE_VERSION}/bin:${PATH}"
 
+ARG SHELL_SCRIPT="install-fcl.sh"
+COPY "./.docker/scripts/${SHELL_SCRIPT}" "${SCRIPTS_DIR}/${SHELL_SCRIPT}"
+RUN bash "${SCRIPTS_DIR}/${SHELL_SCRIPT}"
+
 # Setting ARGs and ENVs for user creation and workspace setup
 ARG ARG_USERNAME="dev"
 ARG ARG_USER_UID=8001
