--- a/.docker/docker-compose.foxy-dsr.yaml
+++ b/.docker/docker-compose.foxy-dsr.yaml
@@ -30,7 +30,7 @@ services:
     command:
       # Specifies the command to be executed when the container is run
       - bash
-      - $CONTAINER_LAUNCH_SCRIPT
+      # - $CONTAINER_LAUNCH_SCRIPT
     # set the environment variables
     environment:
       USER_UID: $CONTAINER_USER_UID
